Updated README.md with tuning options